--- a/CourseManagementSystem.API/Pages/Shared/_LoginPartial.cshtml
+++ b/CourseManagementSystem.API/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using CourseManagementSystem.API.Models;
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<Person> SignInManager
+@inject UserManager<Person> UserManager
 
 @{
     string returnUrl = null;
