--- a/CourseManagementSystem.API/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -19,7 +19,7 @@
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/students']">Grades</a>
+            <a class="nav-link text-dark" [routerLink]="['/students']">Students</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/grades']">Grades</a>
