--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -1,1 +1,14 @@
-<p>student-detail works!</p>
+<h2>Student: {{student.name}}</h2>
+<h3>Grades</h3>
+<table class="table table-striped">
+  <tr>
+    <th>Topic</th>
+    <th>Grade</th>
+    <th>Comment</th>
+  </tr>
+  <tr *ngFor="let grade of student.grades">
+    <td>{{grade.topic}}</td>
+    <td>{{grade.value}}</td>
+    <td>{{grade.comment}}</td>
+  </tr>
+</table>
