--- a/CourseManagementSystem.API/ClientApp/src/app/student-list/student-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-list/student-list.component.html
@@ -1,8 +1,13 @@
 <table>
-    <tr><th>ID</th><th>Name</th><th>Email</th></tr>
-    <tr *ngFor="let person of people">
-        <td>{{person.id}}</td>
-        <td>{{person.name}}</td>
-        <td>{{person.email}}</td>
-    </tr>
+  <tr>
+    <th>ID</th>
+    <th>Name</th>
+    <th>Email</th>
+  </tr>
+  <tr *ngFor="let person of people">
+    <td>{{person.id}}</td>
+    <td>{{person.name}}</td>
+    <td>{{person.email}}</td>
+    <td><a class="nav-link" routerLink="/students/{{person.id}}">Details</a></td>
+  </tr>
 </table>
