--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -1,4 +1,6 @@
 <h2>Student: {{student.name}}</h2>
 <h3>Grades</h3>
 <app-grade-list [grades]="student.grades"></app-grade-list>
-<button class="btn btn-info">Add</button>
+<div>
+    <button type="submit" class="btn btn-primary" (click)="addGrade()">Add</button>
+</div>
