--- a/CourseManagementSystem.API/Pages/Shared/_LoginPartial.cshtml
+++ b/CourseManagementSystem.API/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using CourseManagementSystem.API.Models;
+@using CourseManagementSystem.Data.Models;
 @inject SignInManager<Person> SignInManager
 @inject UserManager<Person> UserManager
 
