--- a/CourseManagementSystem.API/ClientApp/src/app/course-list/course-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-list/course-list.component.html
@@ -1,12 +1,24 @@
-<h3>Courses</h3>
+<h3>My Courses</h3>
 <table class="table table-striped table-responsive">
-  <tr *ngFor="let course of courses">
-    <td>{{course.name}}</td>
-    <td *ngIf="isAdmin">
+  <tr *ngFor="let course of memberCourses">
+    <td>
+      <a routerLink="/courses/{{course.id}}">{{course.name}}</a>
+    </td>
+  </tr>
+</table>
+
+<h3>Managed Courses</h3>
+<table class="table table-striped table-responsive">
+  <tr *ngFor="let course of managedCourses">
+    <td>
+      <a routerLink="/courses/{{course.id}}">{{course.name}}</a>
+    </td>
+    <td>
       <button class="btn btn-danger" (click)="removeCourse(course.id)">Remove</button>
     </td>
   </tr>
 </table>
+
 <div class="jumbotron">
   <h3>Add new course</h3>
   <form>
