course detail + file sharing components completed

--- a/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
@@ -1,3 +1,3 @@
-<p>course-detail works!</p>
-<p>{{courseId}}</p>
 <app-file-list [courseId]="courseId"></app-file-list>
+<!--<app-student-list [courseId]="courseId"></app-student-list>-->
+
