--- a/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
@@ -1,3 +1,3 @@
 <app-file-list [courseId]="courseId"></app-file-list>
-<!--<app-student-list [courseId]="courseId"></app-student-list>-->
+<app-student-list [courseId]="courseId"></app-student-list>
 
