--- a/CourseManagementSystem.API/ClientApp/src/app/student-list/student-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-list/student-list.component.html
@@ -1,13 +1,15 @@
-<h3>Students</h3>
-<table class="table table-striped table-responsive">
-  <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th *ngIf="isAdmin"></th>
-  </tr>
-  <tr *ngFor="let person of people">
-    <td>{{person.name}}</td>
-    <td>{{person.email}}</td>
-    <td *ngIf="isAdmin"><a class="nav-link" routerLink="/students/{{person.id}}">Details</a></td>
-  </tr>
-</table>
+<div class="jumbotron">
+  <h3>Students</h3>
+  <table class="table table-striped table-responsive">
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th *ngIf="isAdmin"></th>
+    </tr>
+    <tr *ngFor="let person of people">
+      <td>{{person.name}}</td>
+      <td>{{person.email}}</td>
+      <td *ngIf="isAdmin"><a class="nav-link" routerLink="/students/{{person.id}}">Details</a></td>
+    </tr>
+  </table>
+</div>
