test-list component added

--- a/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
@@ -4,4 +4,5 @@
 
 <app-file-list [courseId]="courseId"></app-file-list>
 <app-student-list [courseId]="courseId"></app-student-list>
+<app-test-list [courseId]="courseId"></app-test-list>
 
