--- a/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
@@ -1,6 +1,6 @@
 <div>
   <div *ngFor="let question of courseTest.questions">
-    <div>Question {{question.number}}</div>
+    <h2>Question {{question.number}}</h2>
     <div>{{question.questionText}}</div>
     <div>Correct answer: {{question.correctAnswer}}</div>
   </div>
