delete-test button added

--- a/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
@@ -5,6 +5,9 @@
       <td>
         <a routerLink="/tests/{{test.id}}">{{test.topic}}</a>
       </td>
+      <td *ngIf="isAdmin">
+        <button class="btn btn-danger" (click)="deleteTest(test.id)">Remove</button>
+      </td>
     </tr>
   </table>
 </div>
