--- a/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
@@ -10,4 +10,5 @@
       </td>
     </tr>
   </table>
+  <button class="btn btn-success" routerLink="/tests/create/{{this.courseId}}">Create new test</button>
 </div>
