--- a/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
@@ -2,9 +2,13 @@
   <h2>Create new test</h2>
   <form>
     <div class="form-group">
+      <label for="testTopic">Topic</label>
+      <input type="text" class="form-control" id="testTopic" [(ngModel)]="testToCreate.topic" name="testTopic">
+    </div>
+    <div class="form-group">
       <label for="questionCountInput">Question count</label>
       <input type="number" class="form-control" id="questionCountInput" [(ngModel)]="this.questionCount"
-             [ngModelOptions]="{standalone: true}">
+             name="questionCount">
     </div>
     <button type="button" class="btn btn-primary" (click)="updateQuestionCount()">Apply</button>
   </form>
@@ -14,8 +18,14 @@
       <div class="form-group">
         <label for="questionText{{question.number}}">Question text</label>
         <input type="text" class="form-control" id="questionText{{question.number}}"
-               [(ngModel)]="question.questionText">
+               [(ngModel)]="question.questionText" name="questionText{{question.number}}">
+      </div>
+      <div class="form-group">
+        <label for="questionAnswer{{question.number}}">Correct answer</label>
+        <input type="text" class="form-control" id="questionAnswer{{question.number}}"
+               [(ngModel)]="question.correctAnswer" name="questionAnswer{{question.number}}">
       </div>
     </div>
   </form>
+  <button *ngIf="testToCreate.questions.length > 0" type="button" class="btn btn-success" (click)="createTest()">Create</button>
 </div>
