--- a/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
@@ -3,7 +3,8 @@
   <table class="table table-striped table-responsive">
     <tr *ngFor="let test of this.tests">
       <td>
-        <a routerLink="/tests/{{test.id}}">{{test.topic}}</a>
+        <a *ngIf="isAdmin" routerLink="/tests/{{test.id}}">{{test.topic}}</a>
+        <a *ngIf="!isAdmin" routerLink="/tests/submit/{{test.id}}">{{test.topic}}</a>
       </td>
       <td *ngIf="isAdmin">
         <button class="btn btn-danger" (click)="deleteTest(test.id)">Remove</button>
