--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -1,4 +1,12 @@
 <h2>Student: {{student.name}}</h2>
+
+<h3>Tests</h3>
+<table class="table table-striped table-responsive">
+  <tr *ngFor="let submission of testSubmissions">
+    <td><a routerLink="/submissions/{{submission.testSubmissionId}}">{{submission.testTopic}}</a></td>
+  </tr>
+</table>
+
 <h3>Grades</h3>
 <table class="table table-striped table-responsive">
   <tr>
@@ -14,9 +22,6 @@
     <td *ngIf="isAdmin">
       <button class="btn btn-danger" (click)="removeGrade(grade.id)">Remove</button>
     </td>
-  </tr>
-  <tr *ngFor="let submission of testSubmissions">
-    <td><a routerLink="submission/{{submission.testSubmissionId}}">{{submission.testTopic}}</a></td>
   </tr>
 </table>
 <div class="jumbotron" *ngIf="isAdmin">
