test submission review component filled with the data

--- a/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
@@ -1,1 +1,6 @@
-<p>test-submission-review works!</p>
+<h2>{{submission.testTopic}}</h2>
+<div *ngFor="let answer of submission.answers">
+  <h3>Question {{answer.questionNumber}}</h3>
+  <div>{{answer.questionText}}</div>
+  <div>Your answer: {{answer.answerText}}</div>
+</div>
