jumbotron added to test detail

--- a/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div *ngFor="let question of courseTest.questions">
+  <div class="jumbotron" *ngFor="let question of courseTest.questions">
     <h2>Question {{question.number}}</h2>
     <div>{{question.questionText}}</div>
     <div>Correct answer: {{question.correctAnswer}}</div>
