--- a/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
@@ -3,5 +3,6 @@
     <h2>Question {{question.number}}</h2>
     <div>{{question.questionText}}</div>
     <div>Correct answer: {{question.correctAnswer}}</div>
+    <div>Points: {{question.points}}</div>
   </div>
 </div>
