--- a/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
@@ -1,8 +1,10 @@
-<div>
-  <div class="jumbotron" *ngFor="let question of courseTest.questions">
-    <h2>Question {{question.number}}</h2>
-    <div>{{question.questionText}}</div>
-    <div>Correct answer: {{question.correctAnswer}}</div>
-    <div>Points: {{question.points}}</div>
-  </div>
+<div class="jumbotron">
+  <h2>{{courseTest.topic}}</h2>
+  <h3>Weight: {{courseTest.weight}}</h3>
+</div>
+<div class="jumbotron" *ngFor="let question of courseTest.questions">
+  <h3>Question {{question.number}}</h3>
+  <div>{{question.questionText}}</div>
+  <div>Correct answer: {{question.correctAnswer}}</div>
+  <div>Points: {{question.points}}</div>
 </div>
