--- a/CourseManagementSystem.API/ClientApp/src/app/test-submit/test-submit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submit/test-submit.component.html
@@ -1,6 +1,8 @@
-<h3>{{this.testSubmission.testTopic}}</h3>
-<div *ngFor="let answer of this.testSubmission.answers">
-  <h2>Question {{answer.questionNumber}}</h2>
+<div class="jumbotron">
+  <h2>{{this.testSubmission.testTopic}}</h2>
+</div>
+<div class="jumbotron" *ngFor="let answer of this.testSubmission.answers">
+  <h3>Question {{answer.questionNumber}}</h3>
   <div class="form-group">
     <div>{{answer.questionText}}</div>
     <label for="answerText{{answer.questionNumber}}">Answer text</label>
