--- a/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
@@ -8,7 +8,7 @@
   <div>{{answer.questionText}}</div>
   <div>Your answer: {{answer.answerText}}</div>
   <div>Correct answer: {{answer.correctAnswer}}</div>
-  <div>Points: {{answer.receivedPoints}}/{{answer.maximalPoints}}</div>
+  <div><b>Points: {{answer.receivedPoints}}/{{answer.maximalPoints}}</b></div>
 </div>
 
 <div class="jumbotron">
