--- a/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
@@ -9,6 +9,7 @@
   <div>Your answer: {{answer.answerText}}</div>
   <div>Correct answer: {{answer.correctAnswer}}</div>
   <div><b>Points: {{answer.receivedPoints}}/{{answer.maximalPoints}}</b></div>
+  <div>Comment: {{answer.comment}}</div>
 
   <br>
 
@@ -17,12 +18,14 @@
     <div class="form-group">
       <label for="updatedPoints{{answer.questionNumber}}">Points:</label>
       <input type="number" class="form-control" id="updatedPoints{{answer.questionNumber}}"
-             [(ngModel)]="getCorrespondingEvaluatedAnswer(answer).updatedPoints" name="updatedPoints{{answer.questionNumber}}" min="0">
+             [(ngModel)]="getCorrespondingEvaluatedAnswer(answer).updatedPoints"
+             name="updatedPoints{{answer.questionNumber}}" min="0">
     </div>
     <div class="form-group">
       <label for="comment{{answer.questionNumber}}">Comment:</label>
       <textarea class="form-control" id="comment{{answer.questionNumber}}"
-                [(ngModel)]="getCorrespondingEvaluatedAnswer(answer).updatedComment" name="comment{{answer.questionNumber}}"></textarea>
+                [(ngModel)]="getCorrespondingEvaluatedAnswer(answer).updatedComment"
+                name="comment{{answer.questionNumber}}"></textarea>
     </div>
   </div>
 </div>
