list of submitted solutions in test detail

--- a/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
@@ -8,3 +8,5 @@
   <div>Correct answer: {{question.correctAnswer}}</div>
   <div>Points: {{question.points}}</div>
 </div>
+
+<app-test-submission-list [testId]="courseTest.id"></app-test-submission-list>
