--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -1,22 +1,6 @@
 <h2>Student: {{student.name}}</h2>
 
-<h3>Tests</h3>
-<table class="table table-striped table-responsive">
-  <tr>
-    <th>Topic</th>
-    <th>Score</th>
-    <th>Weight</th>
-  </tr>
-  <tr *ngFor="let submission of testSubmissions">
-    <td>
-      <a routerLink="/submissions/{{submission.testSubmissionId}}">{{submission.testTopic}}</a>
-    </td>
-    <td>
-      <b>{{getPercentualScore(submission.percentualScore)}}%</b>
-    </td>
-    <td>{{submission.testWeight}}</td>
-  </tr>
-</table>
+<app-student-test-submissions [userId]="userId"></app-student-test-submissions>
 
 <h3>Grades</h3>
 <table class="table table-striped table-responsive">
@@ -37,4 +21,5 @@
     </td>
   </tr>
 </table>
+
 <app-add-grade *ngIf="isAdmin" [userId]="userId"></app-add-grade>
