--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -2,24 +2,6 @@
 
 <app-student-test-submissions [userId]="userId"></app-student-test-submissions>
 
-<h3>Grades</h3>
-<table class="table table-striped table-responsive">
-  <tr>
-    <th>Topic</th>
-    <th>Score</th>
-    <th>Weight</th>
-    <th>Comment</th>
-    <th *ngIf="isAdmin"></th>
-  </tr>
-  <tr *ngFor="let grade of student.grades">
-    <td>{{grade.topic}}</td>
-    <td><b>{{getPercentualScore(grade.percentualValue)}}%</b></td>
-    <td>{{grade.weight}}</td>
-    <td>{{grade.comment}}</td>
-    <td *ngIf="isAdmin">
-      <button class="btn btn-danger" (click)="removeGrade(grade.id)">Remove</button>
-    </td>
-  </tr>
-</table>
+<app-student-grade-list [userId]="userId" [isAdmin]="isAdmin"></app-student-grade-list>
 
 <app-add-grade *ngIf="isAdmin" [userId]="userId"></app-add-grade>
