--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -1,4 +1,4 @@
-<h2>Student: {{student.name}}</h2>
+<h2>Student: {{courseMemberVM.name}}</h2>
 
 <app-student-test-submissions [userId]="userId"></app-student-test-submissions>
 
