--- a/CourseManagementSystem.API/ClientApp/src/app/student-test-submissions/student-test-submissions.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-test-submissions/student-test-submissions.component.html
@@ -11,7 +11,7 @@
         <a routerLink="/submissions/{{submission.testSubmissionId}}">{{submission.testTopic}}</a>
       </td>
       <td>
-        <b>{{getPercentualScore(submission.percentualScore)}}%</b>
+        <b>{{getPercentString(submission.percentualScore)}}</b>
       </td>
       <td>{{submission.testWeight}}</td>
     </tr>
