--- a/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
@@ -9,4 +9,4 @@
   <div>Points: {{question.points}}</div>
 </div>
 
-<app-test-submission-list [testId]="courseTest.id"></app-test-submission-list>
+<app-test-submission-list [testId]="testId"></app-test-submission-list>
