--- a/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
@@ -37,6 +37,6 @@
 <br>
 
 <div class="jumbotron">
-  <h2>Total score: {{getPercentualScore(submission)}}%</h2>
+  <h2>Total score: {{getPercentualScore(submission)}}</h2>
   <h3>Points: {{getReceivedPoints(submission)}}/{{getMaximalPoints(submission)}}</h3>
 </div>
