--- a/CourseManagementSystem.API/ClientApp/src/app/file-list/file-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/file-list/file-list.component.html
@@ -15,7 +15,7 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="addFileForm_File">File</label>
-        <input type="file" #inputFile class="form-control" name="file" id="addFileForm_File" formenctype="multipart/form-data" (change)="onChange($event)" required/>
+        <input type="file" #inputFile class="form-control" name="file" id="addFileForm_File" formenctype="multipart/form-data" (change)="onFileSelect($event)" required/>
       </div>
     </div>
     <button type="submit" class="btn btn-primary" (click)="uploadFile()">Add this file</button>
