added ngx-bootstrap for modals

--- a/CourseManagementSystem.API/ClientApp/src/app/student-grade-list/student-grade-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-grade-list/student-grade-list.component.html
@@ -19,3 +19,5 @@
     </tr>
   </table>
 </div>
+
+<app-confirm-dialog title="Delete a grade" text="You are about to delete a grade. Are you sure?"></app-confirm-dialog>
