--- a/CourseManagementSystem.API/ClientApp/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,20 +1,17 @@
-<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">{{text}}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        {{text}}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger">Confirm</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
+<button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
+
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">{{title}}</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
-</div>
+  <div class="modal-body">
+    {{text}}
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Confirm</button>
+    <button type="button" class="btn btn-default" (click)="modalRef.hide()">Cancel</button>
+  </div>
+</ng-template>
