--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -1,4 +1,6 @@
-<h2>Student: {{courseMember.name}}</h2>
+<div class="jumbotron">
+  <h2>Student: {{courseMember.name}}</h2>
+</div>
 
 <app-student-test-submissions [courseMemberId]="courseMemberId"></app-student-test-submissions>
 
