added simple closure for delete confirmation

--- a/CourseManagementSystem.API/ClientApp/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/confirm-dialog/confirm-dialog.component.html
@@ -8,6 +8,6 @@
   {{text}}
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Confirm</button>
+  <button type="button" class="btn btn-danger" (click)="confirm()">Confirm</button>
   <button type="button" class="btn btn-default" (click)="modalRef.hide()">Cancel</button>
 </div>
