--- a/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
@@ -12,6 +12,11 @@
            name="weight">
   </div>
   <div class="form-group">
+    <label for="testDeadline">Deadline</label>
+    <input type="datetime-local" class="form-control" id="testDeadline" [(ngModel)]="testToCreate.deadline"
+           name="testDeadline">
+  </div>
+  <div class="form-group">
     <label for="questionCountInput">Question count</label>
     <input type="number" class="form-control" id="questionCountInput" [(ngModel)]="this.questionCount"
            name="questionCount">
@@ -38,6 +43,8 @@
     </div>
   </div>
 </form>
-<button *ngIf="testToCreate.questions.length > 0" type="button" class="btn btn-success" (click)="createTest()">
-  Create
-</button>
+<div class="my-3">
+  <button *ngIf="testToCreate.questions.length > 0" type="button" class="btn btn-success" (click)="createTest()">
+    Create
+  </button>
+</div>
