--- a/CourseManagementSystem.API/ClientApp/src/app/test-edit/test-edit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-edit/test-edit.component.html
@@ -10,6 +10,10 @@
     <label for="testWeight">Test weight</label>
     <input type="number" min="0" class="form-control" id="testWeight" [(ngModel)]="courseTest.weight" name="testWeight">
   </div>
+  <div class="form-group">
+    <label for="testDeadline">Deadline</label>
+    <input type="datetime-local" class="form-control" id="testDeadline" [(ngModel)]="courseTest.deadline" name="testDeadline">
+  </div>
 </div>
 <div class="jumbotron" *ngFor="let question of courseTest.questions">
   <div class="form-group">
