--- a/CourseManagementSystem.API/ClientApp/src/app/course-enrollment/course-enrollment.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-enrollment/course-enrollment.component.html
@@ -3,9 +3,9 @@
   <form>
     <div class="form-group">
       <label for="courseId">Course ID</label>
-      <input type="number" class="form-control" name="courseId" id="courseId" placeholder="Course ID" required
+      <input type="text" class="form-control" name="courseId" id="courseId" placeholder="Course ID" required
              [(ngModel)]="this.courseToEnrollId">
     </div>
-    <button type="submit" class="btn btn-primary" (click)="enroll()">Enroll</button>
+    <button type="button" class="btn btn-primary" (click)="enroll()">Enroll</button>
   </form>
 </div>
