--- a/CourseManagementSystem.API/ClientApp/src/app/file-list/file-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/file-list/file-list.component.html
@@ -2,7 +2,7 @@
   <h3>Shared files</h3>
   <table class="table table-striped table-responsive">
     <tr *ngFor="let file of this.uploadedFiles">
-      <td><span class="btn btn-link" (click)="downloadFile(file.id)">{{file.name}}</span></td>
+      <td><span class="btn btn-link" (click)="downloadFile(file.id, file.name)">{{file.name}}</span></td>
       <td *ngIf="isAdmin">
         <button class="btn btn-danger" (click)="removeFile(file.id)">Remove</button>
       </td>
