average score component added

--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -6,4 +6,6 @@
 
 <app-student-grade-list [courseMemberId]="courseMemberId" [isAdmin]="isAdmin"></app-student-grade-list>
 
+<app-student-average-score [courseMemberId]="courseMemberId"></app-student-average-score>
+
 <app-add-grade *ngIf="isAdmin" [courseMemberId]="courseMemberId"></app-add-grade>
