--- a/CourseManagementSystem.API/ClientApp/src/app/student-average-score/student-average-score.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-average-score/student-average-score.component.html
@@ -1,3 +1,3 @@
 <div class="jumbotron">
-  <h2>Total Score: {{getPercentString(averageScore)}}</h2>
+  <h2>Total Score: {{percentStringFormatter.format(averageScore)}}</h2>
 </div>
