--- a/CourseManagementSystem.API/ClientApp/src/app/student-test-submissions/student-test-submissions.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-test-submissions/student-test-submissions.component.html
@@ -13,7 +13,7 @@
         <a routerLink="/submissions/{{submission.testSubmissionId}}">{{submission.testTopic}}</a>
       </td>
       <td>
-        <b>{{getPercentString(submission.percentualScore)}}</b>
+        <b>{{percentStringFormatter.format(submission.percentualScore)}}</b>
       </td>
       <td>
         {{submission.testWeight}}
