testSubmissionVM Datetime changed to string

--- a/CourseManagementSystem.API/ClientApp/src/app/student-test-submissions/student-test-submissions.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-test-submissions/student-test-submissions.component.html
@@ -19,7 +19,7 @@
         {{submission.testWeight}}
       </td>
       <td>
-        {{submission.submittedDateTime}}
+        {{dateTimeFormatter.formatToLocal(submission.submittedDateTime)}}
       </td>
       <td>
         {{submission.isReviewed ? 'YES' : 'NO'}}
