--- a/CourseManagementSystem.API/ClientApp/src/app/test-submission-list/test-submission-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submission-list/test-submission-list.component.html
@@ -11,7 +11,7 @@
     <tr *ngFor="let testInfo of this.submissionsInfos">
       <td>{{testInfo.studentEmail}}</td>
       <td><b>{{percentStringFormatter.format(testInfo.percentualScore)}}</b></td>
-      <td>{{testInfo.submittedDateTime}}</td>
+      <td>{{dateTimeFormatter.formatToLocal(testInfo.submittedDateTime)}}</td>
       <td>{{testInfo.isReviewed ? 'YES' : 'NO'}}</td>
       <td><a routerLink="/submissions/{{testInfo.testSubmissionId}}">Detail</a></td>
     </tr>
