--- a/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h2>{{submission.testTopic}}</h2>
   <div>
-    Submitted at: {{submission.submittedDateTime}}
+    Submitted at: {{dateTimeFormatter.formatToLocal(submission.submittedDateTime)}}
   </div>
   <div *ngIf="submission.isReviewed">
     <b>Reviewed</b>
