--- a/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-detail/test-detail.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h2>{{courseTest.topic}}</h2>
   <div>Weight: {{courseTest.weight}}</div>
-  <div>Deadline: {{courseTest.deadline}}</div>
+  <div>Deadline: {{dateTimeFormatter.formatToLocal(courseTest.deadline)}}</div>
 </div>
 <div class="jumbotron" *ngFor="let question of courseTest.questions">
   <h3>Question {{question.number}}</h3>
