--- a/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
@@ -12,9 +12,12 @@
            name="weight">
   </div>
   <div class="form-group">
-    <label for="testDeadline">Deadline</label>
-    <input type="datetime-local" class="form-control" id="testDeadline" [(ngModel)]="testToCreate.deadline"
-           name="testDeadline">
+      <label for="testDeadlineDate">Deadline</label>
+      <input type="date" class="form-control" id="testDeadlineDate" [(ngModel)]="dateTimeBinder.date"
+             name="testDeadlineDate">
+      <input type="time" class="form-control" id="testDeadlineTime" [(ngModel)]="dateTimeBinder.time"
+             name="testDeadlineTime">
+
   </div>
   <div class="form-group">
     <label for="questionCountInput">Question count</label>
