--- a/CourseManagementSystem.API/ClientApp/src/app/test-edit/test-edit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-edit/test-edit.component.html
@@ -11,8 +11,12 @@
     <input type="number" min="0" class="form-control" id="testWeight" [(ngModel)]="testToUpdate.weight" name="testWeight">
   </div>
   <div class="form-group">
-    <label for="testDeadline">Deadline</label>
-    <input type="datetime-local" class="form-control" id="testDeadline" [(ngModel)]="testToUpdate.deadline" name="testDeadline">
+    <label for="testDeadlineDate">Deadline</label>
+    <input type="date" class="form-control" id="testDeadlineDate" [(ngModel)]="dateTimeBinder.date"
+           name="testDeadlineDate">
+    <input type="time" class="form-control" id="testDeadlineTime" [(ngModel)]="dateTimeBinder.time"
+           name="testDeadlineTime">
+
   </div>
 </div>
 <div class="jumbotron" *ngFor="let question of testToUpdate.questions">
