date-formatting updated, DateTime.Now changed to DateTime.UtcNow

--- a/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
@@ -8,7 +8,7 @@
           <a routerLink="/tests/{{test.id}}">{{test.topic}}</a>
         </td>
         <td>
-          <b>Deadline: {{test.deadline.toLocaleString()}}</b>
+          <b>Deadline: {{dateTimeFormatter.formatToLocal(test.deadline)}}</b>
         </td>
         <td>
           <button class="btn btn-info" (click)="publishTest(test)">Publish</button>
@@ -28,7 +28,7 @@
           <a *ngIf="!isAdmin" routerLink="/tests/submit/{{test.id}}">{{test.topic}}</a>
         </td>
         <td>
-          <b>Deadline: {{test.deadline.toLocaleString()}}</b>
+          <b>Deadline: {{dateTimeFormatter.formatToLocal(test.deadline)}}</b>
         </td>
       </tr>
     </table>
